// Code generated by github.com/99designs/gqlgen, DO NOT EDIT.

package model

type AmendPostInput struct {
	PostID     string  `json:"postId"`
	Action     string  `json:"action"`
	WantDelete *bool   `json:"wantDelete,omitempty"`
	NewTitle   *string `json:"newTitle,omitempty"`
	NewContent *string `json:"newContent,omitempty"`
}

type AuthInput struct {
	Code string `json:"code"`
}

type Comment struct {
	CommentID string  `json:"commentId"`
	PostID    *string `json:"postId,omitempty"`
	AuthorID  *string `json:"authorId,omitempty"`
	CreatedAt *string `json:"createdAt,omitempty"`
}

type CommentInput struct {
	CommentID string  `json:"commentId"`
	PostID    *string `json:"postId,omitempty"`
	Context   *string `json:"context,omitempty"`
}

type CommentMutationAct struct {
	Create *Comment `json:"create,omitempty"`
	Update *Comment `json:"update,omitempty"`
}

type Credential struct {
	AccessToken string `json:"accessToken"`
	Role        *bool  `json:"role,omitempty"`
	PostPerm    *bool  `json:"postPerm,omitempty"`
	UserID      string `json:"userId"`
}

type CredentialInput struct {
	AccessToken string  `json:"accessToken"`
	UserID      *string `json:"userId,omitempty"`
}

type Mutation struct {
}

type NewCommentInput struct {
	AuthorID *string `json:"authorId,omitempty"`
	PostID   string  `json:"postId"`
	Content  string  `json:"content"`
}

type NewPostInput struct {
	AuthorID *string `json:"authorId,omitempty"`
	Title    *string `json:"title,omitempty"`
	Content  string  `json:"content"`
}

type Post struct {
	PostID    string  `json:"postId"`
	Title     *string `json:"title,omitempty"`
	Content   *string `json:"content,omitempty"`
	CreatedAt *string `json:"createdAt,omitempty"`
	UpdatedAt *string `json:"updatedAt,omitempty"`
}

type PostInput struct {
	PostID string `json:"postId"`
}

type PostMutationAct struct {
	Create *Post `json:"create,omitempty"`
	Update *Post `json:"update,omitempty"`
}

type Query struct {
}

type User struct {
	UserID    string  `json:"userId"`
	UserName  *string `json:"userName,omitempty"`
	Email     *string `json:"email,omitempty"`
	Banned    *bool   `json:"banned,omitempty"`
	AllowPost *bool   `json:"allowPost,omitempty"`
}

type UserInput struct {
	UserID    string  `json:"userId"`
	UserName  *string `json:"userName,omitempty"`
	Email     *string `json:"email,omitempty"`
	Banned    *bool   `json:"banned,omitempty"`
	AllowPost *bool   `json:"allowPost,omitempty"`
}

type UserMutationAct struct {
	Login  *Credential `json:"login,omitempty"`
	Update *User       `json:"update,omitempty"`
}

type CommentQueryAct struct {
	ListCommentsByPostID []*Comment `json:"listCommentsByPostId,omitempty"`
	GetComment           *Comment   `json:"getComment,omitempty"`
}

type PostQueryAct struct {
	ListPosts []*Post `json:"listPosts,omitempty"`
	GetPost   *Post   `json:"getPost,omitempty"`
	GetPosts  []*Post `json:"getPosts,omitempty"`
}

type UserQueryAct struct {
	GetUser *User `json:"getUser,omitempty"`
}
