---
title: design by DeepSeek & AoLoong
---
classDiagram
    class user {
        +userid(String) PK
        username
        email
        role
        banned
        allowpost
        githubtoken
        createdat
    }

    class post {
        +postid(String) PK
        authorid
        title
        content
        status
        createdat
        updatedat
    }
    class commentMap {
        +postid(String) PK
        commentid(String)
    }

    class comment {
        +postid(String) PK1
        +commentid(String) PK2
        authorid
        content
        status
        createdat
    }

    user --> post: authorid → userid
    user --> comment: authorid → userid
    post --> comment: postid
    comment <-- commentMap: commentid
    post --> commentMap: postid